--- a/_layouts/catpage.html
+++ b/_layouts/catpage.html
@@ -14,5 +14,6 @@ layout: default
         <li><a href="{{ post.url }}">{{ post.title }}</a></li>
       {% endfor %}
     </ul>
+    {% break %}
   {% endif %}
 {% endfor %}
