Added Fira Mono for code.

--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -88,3 +88,8 @@ h3 > .post-link {
 main h1, main h2, main h3, main h4 {
   font-weight: 200;
 }
+
+pre, code {
+  font-family: "Fira Mono", monospace;
+  font-size: 90%;
+}
