--- a/_sass/minima.scss
+++ b/_sass/minima.scss
@@ -4,7 +4,7 @@
 
 $base-font-family: "FiraGO", sans-serif !default;
 $base-font-size:   16px !default;
-$base-font-weight: 300 !default;
+$base-font-weight: 200 !default;
 $small-font-size:  $base-font-size * 0.8 !default;
 $base-line-height: 2 !default;
 
@@ -65,7 +65,7 @@ main.book-style p:first-of-type {
 }
 
 strong {
-  font-weight: 600;
+  font-weight: 200%;
 }
 
 figure {
@@ -86,10 +86,15 @@ h3 > .post-link {
 }
 
 main h1, main h2, main h3, main h4 {
-  font-weight: 200;
+  font-weight: 50%;
 }
 
 pre, code {
   font-family: "Fira Mono", monospace;
   font-size: 90%;
+  line-height: 1.4;
+}
+
+.highlight .o, .highlight .k {
+  font-weight: 600;
 }
