--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,4 +13,8 @@
     {% if jekyll.environment == 'production' and site.google_analytics %}
         {% include google-analytics.html %}
     {% endif %}
+
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+
 </head>
